# clipp

./: ALL_test.cpp  CMakeLists.txt  README.md  mk-msvs-solution-clang.cmd  mk-msvs-solution.cmd  mk-trace.cmd  mk-vars.cmd
examples/: ALL_examples.cpp  CMakeLists.txt  actions.cpp  align.cpp  alternatives.cpp  annotate.cpp  argv0.cpp  commands.cpp  complex_nesting.cpp  convert.cpp  counter.cpp  doc_filter.cpp  documentation.cpp  example-def.h  finder.cpp  float_vector.cpp  groups.cpp  joinable_flags.cpp  model.cpp  naval_fate.cpp  nested_alternatives.cpp  numbers.cpp  options.cpp  options_values.cpp  parsing.cpp  pch.h  positional_values.cpp  repeatable.cpp  required_flags.cpp  sanity.cpp  send.cpp  simplify.cpp  switches.cpp  tagnames.cpp  text_formatting.cpp  timing.cpp  transform.cpp
include/: clipp-narrow.h  clipp-wide.h  clipp.h
test/: ALL_test.cpp  CMakeLists.txt  actions_test.cpp  alternative_groups_test.cpp  alternative_options_test.cpp  alternative_required_test.cpp  blocking_test01.cpp  blocking_test02.cpp  blocking_test03.cpp  blocking_test04.cpp  blocking_test05.cpp  blocking_test06.cpp  blocking_test07.cpp  blocking_test08.cpp  blocking_test09.cpp  blocking_test10.cpp  documentation_test.cpp  documentation_test_wide.cpp  empty_args.cpp  flag_param_factories_test.cpp  joined_flags_test1.cpp  joined_flags_test2.cpp  joined_flags_test3.cpp  joined_flags_test4.cpp  joined_flags_test5.cpp  joined_flags_test6.cpp  joined_params_test1.cpp  joined_params_test2.cpp  joined_sequence_test.cpp  mixed_params_test.cpp  nesting_test.cpp  options_test.cpp  pch.h  prefix_free_test.cpp  prefix_test.cpp  repeatability_test.cpp  repeatable_alternatives_test.cpp  required_params_test1.cpp  required_params_test2.cpp  run_tests.py  (+5 more)
test/all-tests/: ALL_test.cpp
